ci: migrate to quick-release and rebuild

--- a/package.json
+++ b/package.json
@@ -34,16 +34,13 @@
   "devDependencies": {
     "@commitlint/cli": "^14.1.0",
     "@commitlint/config-conventional": "^14.1.0",
-    "@release-it/bumper": "^3.0.1",
-    "@release-it/conventional-changelog": "^3.3.0",
     "@vercel/ncc": "^0.31.1",
-    "eslint": "^8.1.0",
+    "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
-    "prettier": "^2.4.1",
-    "release-it": "^14.11.6"
+    "prettier": "^2.4.1"
   }
 }
